--- a/Penchala_Projects.html
+++ b/Penchala_Projects.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav pull-right">
-                        <li><a href="Penchala_Home.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="Penchala_AboutMe.html">About Me</a></li>
                         <li><a href="Penchala_Resume.html">Resume</a></li>
                         <li class="active"><a href="Penchala_Projects.html">Projects</a></li>
