--- a/Penchala_AboutMe.html
+++ b/Penchala_AboutMe.html
@@ -8,7 +8,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     </head>
-    
+
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
@@ -16,7 +16,7 @@
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>                     
+                        <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="#">Ritviksiddha Penchala</a>
                 </div>
@@ -40,13 +40,13 @@
             </div>
             <div class="container">
                 <p>
-                    Ritvik has yet to decide exactly which field he wishes to pursue. Being in high school, he wants to expose himself to as many different career paths as he can before he makes a concrete decision. However, he does have some idea of what he wants to do. He has a desire to do something out of the ordinary. He has interests in numerous fields, ranging from Bioengineering to Gaming. He wants to continue to use his previously acquired skills from Engineering and apply them to a newer field.
+                    Ritvik has yet to decide exactly which field he wishes to pursue. Being in high school, he wants to expose himself to as many different career paths as he can before he makes a concrete decision. However, he does have some idea of what he wants to do. He has a desire to do something out of the ordinary. He has interests in numerous fields, ranging from Bioengineering to Gaming. He wants to continue to use his Engineering skill and apply them to a newer field.
                 </p>
                 <p>
                     His life as an engineer began in 5th Grade. He started learning programing in Scratch, but quickly migrated to a non-drag-and-drop program, Python. After spending about a year honing his skills at Python, his dad decided it was time for Ritvik to learn a more powerful language. And so began the journey of constantly learning and trying to master his skills at multiple languages. As of now Ritvik knows Java, JavaScript, Python, HTML and CSS. He is continuing journey by learning R program. Ritvik has applied his skills by competing in FLL, the First Lego League. It is a Lego Robotics Competition that he has partaken in for 2 years. He continues to support FLL by coaching his younger sibling. He has moved on to a more difficult platform by participating in his high school Robotics Team which uses VEX Robotics.
                 </p>
                 <p>
-                    Ritvik is continuing to hone his skills by joining the Computer Science Elective at his high school. He plans to keep learning more about programming, computers, and engineering, in general. He has joined the Dublin High School Robotics Team in order to learn about VEX Robotics and apply his older Lego Robotics skills to a newer, more challenging, competition. Other than direct engineering skills, he has also gained many leadership and communication skills. In John F. Kennedy Middle School, he was a part of the school Leadership elective. He was tasked with managing events such as dances, rallies, and other school events. He was also elected as a Student Body Offices, the Historian, in the 8th grade. 
+                    Ritvik is continuing to hone his skills by joining the Computer Science Elective at his high school. He plans to keep learning more about programming, computers, and engineering, in general. He has joined the Dublin High School Robotics Team in order to learn about VEX Robotics and apply his older Lego Robotics skills to a newer, more challenging, competition. Other than direct engineering skills, he has also gained many leadership and communication skills. In John F. Kennedy Middle School, he was a part of the school Leadership elective. He was tasked with managing events such as dances, rallies, and other school events. He was also elected as a Student Body Offices, the Historian, in the 8th grade.
                 </p>
                 <p>
                     Ritvik has proven himself to be a brilliant student in his previous years of schooling, and will continue to do so in his years of high school. He has completed a few projects already and is currently working on a rather large one. This is available on his <a href="Penchala_Projects.html">Projects page</a>. You can view his Resume <a href="Penchala_Resume.html">here</a>. If you would like to contact him, his contact info is available <a href="Penchala_Contactme.html">here</a>. Thank you for visiting this site!
@@ -59,5 +59,5 @@
             </footer>
         </section>
     </body>
-    
+
 </html>
