New Header Style!

--- a/index.html
+++ b/index.html
@@ -32,20 +32,15 @@
         </nav>
 
         <section class="main">
-            <div class="mainTitleRRR jumbotron">
-                <h1 class="text-center">< Ritviksiddha Penchala ></h1>
+            <div class=" middleText jumbotron mainTitleRRR titleBackground">
+              <div class = "container">
+                <div class="col-sm-1"></div>
+                <div class="col-sm-10" id = "boxTitle">
+                  <h1 class="text-center"> Ritviksiddha Penchala </h1>
+                </div>
+                <div class="col-sm-1"></div>
+              </div>
             </div>
-            <section class="container">
-                <div class="col-sm-4 text-center">
-                    <img src="Images/EV3.png" class="img-rounded"/>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <img src="Images/Ritvik.jpg" class="img-rounded"/>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <img src="Images/tabla.png" class="img-rounded"/>
-                </div>
-            </section>
             <footer class="footResumeRRR">
                 <div class="container text-center">
                     <a href="Penchala_Contactme.html"><img src="Images/email.png"/></a>
