--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div id="myNav" class="overlay">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <div class="overlay-content">
+        <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Projects</a>
         <a href="#">Resume</a>
@@ -38,14 +39,14 @@
     </div>
     
 	  <header>
-	    <div>
-        <h1 class="text-center mainTitle">RI T </h1>
-        <h1 class="text-center mainTitle">V IK</h1>
+	    <div class="container">
+        <h1 class="text-center mainTitle col-sm-12">RI T </h1>
+        <h1 class="text-center mainTitle col-sm-12">V IK</h1>
       </div>
 	  </header>
 	  <div class="container">
-	    <h1 class="title col-sm-3">Intro</h1>
-	    <p class="paragraph col-sm-11">
+	    <h1 class="title">Intro</h1>
+	    <p class="paragraph">
 	      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
 	  </div>
