Update About Me
about.html content update

about.html style change so majority of page is static and the feature to view individual portions has been removed, for now.

--- a/projects.html
+++ b/projects.html
@@ -40,11 +40,39 @@
       <div class="yellow-down-arrow center"></div>
     </div>
     
+  <div class="container">
+    <div class="row justify-content-start">
+      <div class="col-10" id="">
+        <div class="projContainer" id="left">
+          <img src="res/img/laptop.jpg" class='col-12'>
+          <div>
+            <h1 class="title">Example Project</h1>
+            <h3 class="subtitle">Status: <i>In-Progress</i></h3>
+            <p class="projectPar">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </div>
+      </div>
+  </div>
+  
+  <div class="row justify-content-end">
+    <div class="col-10">
+      <div class="projContainer" id="right">
+        <img src="res/img/laptop.jpg" class='col-12'>
+        <div>
+          <h1 class="title">Example Project</h1>
+          <h3 class="subtitle">Status: <i>In-Progress</i></h3>
+          <p class="projectPar">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
     
+    <!--
     <div class="container">
         <div class="projContainer row">
-          <img src="res/img/laptop.jpg" class="col-sm-6">
-          <div class="col-sm-6">
+          <img src="res/img/laptop.jpg" class="col-6">
+          <div class="col-6">
             <h1 class="title">Example Project</h1>
             <h3 class="subtitle">Status: <i>In-Progress</i></h3>
             <p class="projectPar">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -59,6 +87,7 @@
           </div>
         </div>
     </div>
+    -->
 	  
 	  <script src="js/index.js"></script>
 	</body>
