--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <a href="index.html">Home</a>
         <a href="#">About</a>
         <a href="projects.html">Projects</a>
-        <a href="#">Resume</a>
+        <a href="https://docs.google.com/document/d/1YwXzyNpqzfw6xpqNo32YKLcoQCQdwtn6qFgHdcZ16wU/edit?usp=sharing" target="_blank"> Resume</a>
         <a href="contact.html">Contact</a>
       </div>
     </div>
