--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="projects.html">Projects</a>
-        <a href="#">Resume</a>
+        <a href="https://docs.google.com/document/d/1YwXzyNpqzfw6xpqNo32YKLcoQCQdwtn6qFgHdcZ16wU/edit?usp=sharing" target="_blank"> Resume</a>
         <a href="#">Contact</a>
       </div>
     </div>
