Project Styling Update

--- a/projects.html
+++ b/projects.html
@@ -36,14 +36,14 @@
     </div>
     
     <div class="container animated fadeInDown">
-      <h1 class="pageTitle text-center bottomBorderYellow">Projects</h1>
-      <div class="yellow-down-arrow center"></div>
+      <h1 class="pageTitle text-center bottomBorderBlue">Projects</h1>
+      <div class="blue-down-arrow center"></div>
     </div>
     
   <div class="container">
     <div class="row justify-content-start">
-      <div class="col-10" id="">
-        <div class="projContainer" id="left">
+      <div class="col-12" id="">
+        <div class="projContainer" id="">
           <img src="res/img/laptop.jpg" class='col-12'>
           <div>
             <h1 class="title">Example Project</h1>
@@ -55,8 +55,8 @@
   </div>
   
   <div class="row justify-content-end">
-    <div class="col-10">
-      <div class="projContainer" id="right">
+    <div class="col-12">
+      <div class="projContainer" id="">
         <img src="res/img/laptop.jpg" class='col-12'>
         <div>
           <h1 class="title">Example Project</h1>
