Projects Content Update

--- a/projects.html
+++ b/projects.html
@@ -44,11 +44,15 @@
     <div class="row justify-content-start">
       <div class="col-12" id="">
         <div class="projContainer" id="">
-          <img src="res/img/laptop.jpg" class='col-12'>
+          <img src="res/img/R_logo.png" class='col-12'>
           <div>
-            <h1 class="title">Example Project</h1>
-            <h3 class="subtitle">Status: <i>In-Progress</i></h3>
-            <p class="projectPar">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <h1 class="title">Parkinson's Algorithm</h1>
+            <p class="projectPar">
+              For the Alameda County Science Fair, my team and I developed an algorithm in the 
+              programming language R. It would analyze the hand tremors displayed by Parkinson's
+              patients and quantitatively determine whether their condition was improving or
+              worsening. It won the first place prize at the Science Fair that year.
+            </p>
           </div>
         </div>
       </div>
@@ -57,11 +61,17 @@
   <div class="row justify-content-end">
     <div class="col-12">
       <div class="projContainer" id="">
-        <img src="res/img/laptop.jpg" class='col-12'>
+        <img src="res/img/tap_test_screenshot.png" class='col-12'>
         <div>
-          <h1 class="title">Example Project</h1>
-          <h3 class="subtitle">Status: <i>In-Progress</i></h3>
-          <p class="projectPar">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <h1 class="title">Tap Test Application</h1>
+          <p class="projectPar">
+            Tap Test is an Android Application created by me for a Stanford MedX research group.
+            It assists their research by collecting data about Alzheimer's patients' reflexes. It
+            measures the amount of "taps" the patient can perform onto the phone in multiple trials, 
+            carries out basic data analysis of this information, and then sends the data via email
+            to the research team. You can view the application 
+            <a class="generallink" href="#">here</a>.
+          </p>
         </div>
       </div>
     </div>
