--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
       <h1 class="title leftBorderBlue">Martial Artist</h1>
       <p class="paragraph">Another huge passion of mine is martial arts. I’m currently a First Degree Black Belt at West Coast World Martial Arts - Pleasanton. I’ve been learning martial arts since late elementary school, and it’s been a huge part of my life ever since. It’s allowed me to develop, not just physically, but mentally as well. I’ve been assisting my teacher by instructing smaller groups of younger students whenever possible and this has allowed me to develop as a leader and has greatly improved my self-confidence and teaching abilities, as well. </p>
       <h1 class="title leftBorderBlue">More</h1>
-      <p class="paragraph">If you want to learn more about me, you can check out my <a class="generallink" href="#">Resume</a> to see everything I do, or view my <a class="generallink" href="projects.html">Projects</a> to have a more interactive experience. You can also <a class="generallink" href="contact.html">Contact Me</a> with any other questions you have. </p>
+      <p class="paragraph">If you want to learn more about me, you can check out my <a class="generallink" href="https://docs.google.com/document/d/1YwXzyNpqzfw6xpqNo32YKLcoQCQdwtn6qFgHdcZ16wU/edit?usp=sharing" target="_blank">Resume</a> to see everything I do, or view my <a class="generallink" href="projects.html">Projects</a> to have a more interactive experience. You can also <a class="generallink" href="contact.html">Contact Me</a> with any other questions you have. </p>
       
     </div>
   
