--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
             measures the amount of "taps" the patient can perform onto the phone in multiple trials, 
             carries out basic data analysis of this information, and then sends the data via email
             to the research team. You can view the application 
-            <a class="generallink" href="#">here</a>.
+            <a class="generallink" href="https://play.google.com/store/apps/details?id=com.tap.surenderpenchala.taptest&hl=en_US">here</a>.
           </p>
         </div>
       </div>
