--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
           <h1 class="landing-text">Hi! I'm Ritvik.</h1>
           <h4 class=" landing-text">I'm a student, developer, and aspiring medical professional.</h4>
           
-          <h4 class="landing-text">Browse this website portfolio to learn more <a class="generallink" href="#about_tab">about me</a>,
-          check out my <a class="generallink" href="#project_tab">projects</a>,
-          view my <a class="generallink" href="#resume_tab">resume</a>,
-          or go ahead and <a class="generallink" href="#contact_tab">contact me</a> about anything else.</h4>
+          <h4 class="landing-text">Browse this website to : <br />
+           - learn more <a class="generallink" href="#about_tab">about me</a><br/>
+           - check out my <a class="generallink" href="#project_tab">projects</a></br>
+           - view my <a class="generallink" href="#resume_tab">resume</a><br/>
+           - or <a class="generallink" href="#contact_tab">contact me</a></h4>
           
         </div>
       </div>
@@ -133,7 +134,7 @@
     <div class="blue_background">
       <div class="container">
         <div class="row" id="resume_tab">
-          <div class="col s12 m6 white-text">
+          <div class="col s12 m5 white-text">
             <h1>Resume</h1>
             <h5>
               Click <a class="generallink" href="#">here</a> to view my resume.
