--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="col s12 m5 white-text">
             <h1>Resume</h1>
             <h5>
-              Click <a class="generallink" href="https://docs.google.com/document/d/1YwXzyNpqzfw6xpqNo32YKLcoQCQdwtn6qFgHdcZ16wU/edit?usp=sharing" target="_blank">here</a> to view my resume.
+              Click <a class="generallink" href="https://docs.google.com/document/d/1YwXzyNpqzfw6xpqNo32YKLcoQCQdwtn6qFgHdcZ16wU/edit?usp=sharing" target="_blank">here</a> for my resume.
             </h5>
           </div>
           <img src="res/img/undraw_resume_1hqp.svg" class="col s12 m6 center">
