--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <h4>Parkinson's Algorithm</h4>
               <h5><i>Developer from November 2017 - April 2018</i></h5>
               <h5>
-                Algorithm developed in the R programming language for the Synopsys science fair. The algorithm performs statistical analysis on data about hand tremors displayed by Parkinson's patients in order to determine if their condition is getting better or worse.
+                Algorithm developed in the R programming language for the Synopsys science fair. The algorithm performs statistical analysis on the hand tremors of Parkinson's patients to determine if their condition is getting better or worse.
               </h5>
             </div>
           </div>
@@ -103,7 +103,7 @@
               <h4>Tap Test App</h4>
               <h5><i>Developer from August 2018 - December 2018</i></h5>
               <h5>
-                An Android application created to assist a Stanford MedX research group in their work on Alzheimer's. The app provides assistance with the data collection and statistical analysis.
+                An application created for a Stanford MedX research group in their work on Alzheimer's. The app assists with the data collection and statistical analysis.
               </h5>
               <h5 class="project-links">
                 <a href="https://play.google.com/store/apps/details?id=com.tap.surenderpenchala.taptest&hl=en_US" target="_blank" class="generallink">View App</a> 
