--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
               <h4>Parkinson's Algorithm</h4>
               <h5><i>Developer from November 2017 - April 2018</i></h5>
               <h5>
-                Algorithm developed in the R programming language for the Synopsys science fair. The algorithm performs statistical analysis on the hand tremors of Parkinson's patients to determine if their condition is getting better or worse.
+                Algorithm developed in the R language for the Alameda science fair. It performs statistical analysis on the hand tremors of Parkinson's patients to determine if their condition is getting better or worse.
+              </h5>
+              <h5 class="project-links">
+                <i>Research Pending Publication</i> 
               </h5>
             </div>
           </div>
