--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
         <div class="col s12 xl6">
           <h1 class="landing-text">Hi! I'm Ritvik.</h1>
           <h4 class=" landing-text">I'm a student, developer, and aspiring medical professional.</h4>
-          
-          <h4 class="landing-text">Browse this website to:<br />
+          <h4 class="landing-text">Learn more <a class="generallink" href="#about_tab">about me</a>.</h4>
+
+          <!---          <h4 class="landing-text">Browse this website to:<br />
            - learn more <a class="generallink" href="#about_tab">about me</a><br/>
            - check out my <a class="generallink" href="#project_tab">projects</a></br>
            - view my <a class="generallink" href="#resume_tab">resume</a><br/>
            - or <a class="generallink" href="#contact_tab">contact me</a></h4>
-          
+          -->
         </div>
       </div>
     </div>
@@ -62,7 +63,9 @@
     <div class="blue_background">
       <div class="container">
         <div class="row" id="about_tab">
-          <img src="res/img/ritprofile.svg" class="col s12 m6 xl4 center">
+          <div class="col s12 xl4 center">
+          <img src="res/img/ritprofile.svg" class="">
+        </div>
           <div class="col s12 xl8 white-text">
             <h1>About Me</h1>
             <h5>
