Project Content Update

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <div class="row">
             <img src="res/img/undraw_mobile_interface_wakp.svg" class="col s12 m8 xl4 center" id="tap_test_img"  data-aos="fade-up">
             <div class="col s12 xl8">
-              <h4>Tap Test App</h4>
+              <h4>Tap Test</h4>
               <h5><i>Developer from August 2018 - December 2018</i></h5>
               <h5>
                 An application created for a Stanford MedX research group in their work on Alzheimer's. The app assists with the data collection and statistical analysis.
@@ -125,12 +125,27 @@
           </div>
 
           <div class="row" id="gfr_site">
-            <img src="res/img/undraw_click_here_2li1.svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
+            <img src="res/img/undraw_operating_system_4lr6 (1).svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
             <div class="col s12 xl8">
-              <h4>Gael Force Robotics Website</h4>
+              <h4>2Serve</h4>
+              <h5><i>Lead Developer from August 2017 - Current<br />
+                 Vice- President from August 2019 - Current</i></h5>
+              <h5>
+                An online platform seeking to bridge the gap between volunteering organizations and qualified high school volunteers.
+              </h5>
+              <h5 class="project-links">
+                <a href="https://2-serve.org/" target = "_blank" class="generallink">View Site</a> 
+              </h5>
+            </div>
+          </div>
+
+          <div class="row" id="gfr_site">
+            <img src="res/img/undraw_Artificial_intelligence_oyxx (1).svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
+            <div class="col s12 xl8">
+              <h4>Gael Force Robotics</h4>
               <h5><i>Lead Developer from November 2018 - Current</i></h5>
               <h5>
-                A website to showcase my robotics team (team 5327), provide resources for members, network to other VRC teams, and write in our team blog.
+                A website to showcase my robotics team (team 5327), provide resources for members, network to other VRC teams, and write in our team blog. In addition to being the website developer, I also assist in engineering the robot, programming its movement, and documenting the design process.
               </h5>
               <h5 class="project-links">
                 <a href="https://gaelforceroboticsdublin.github.io/" target = "_blank" class="generallink">View Site</a> 
@@ -141,10 +156,10 @@
           <div class="row">
             <img src="res/img/karate_site.svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
             <div class="col s12 xl8">
-              <h4>WCWMA Pleasanton Website</h4>
+              <h4>WCWMA Pleasanton</h4>
               <h5><i>Developer/Designer from August 2019 - Current</i></h5>
               <h5>
-                A website to advertise for my local karate school: West World Martial Arts Pleasanton.
+                A website to advertise for my local karate school: West World Martial Arts Pleasanton. This is also the school where I recieved my black belt.
               </h5>
               <h5 class="project-links">
                 <a href="https://ritvikpen.github.io/WCWMA-Pleasanton-Site/about.html" target="_blank" class="generallink">View Site</a> 
@@ -169,7 +184,7 @@
           <div class="row" id="asdrp">
             <img src="res/img/science.svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
             <div class="col s12 xl8">
-              <h4>ASDRP Summer Research Program</h4>
+              <h4>ASDRP Summer Research</h4>
               <h5><i>Researcher during Summer 2020</i></h5>
               <h5>
                 A Summer Research experience held at ASDRP in Fremont. Developed and conducted novel research under the supervision of professionals in the field of science 
