--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     
     <meta charset="UTF-8">
-    <title>Ritviksiddha Penchala</title>
+    <title>Ritvik - Portfolio</title>
     <link rel="icon" type="image/png" href="res/img/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="res/img/favicon-16x16.png" sizes="16x16" />
 
@@ -47,20 +47,13 @@
         <img class="col s12 xl6" src="res/img/landing_web_dev.svg">
         <div class="col s12 xl6">
           <h1 class="landing-text">Hi! I'm Ritvik.</h1>
-          <h4 class=" landing-text">I'm a student, developer, and aspiring medical professional.</h4>
+          <h4 class="landing-text">I want to use engineering tools to revolutionize healthcare.</h4>
           <h4 class="landing-text">
-            Learn more <a class="generallink" href="#about_tab">about me</a>. <br />
-            Check out my <a class="generallink" href="#project_tab">experience</a>.</br>
-            View my <a class="generallink" href="#resume_tab">resume</a>.<br/>
-            Or <a class="generallink" href="#contact_tab">contact me</a>.</h4>
+            Learn more <a class="generallink" href="#about_tab">about me</a><br />
+            View my <a class="generallink" href="#project_tab">experience</a></br>
+            Check out my <a class="generallink" href="#resume_tab">resume</a><br/>
+            Or <a class="generallink" href="#contact_tab">contact me</a></h4>
           </h4>
-
-          <!---          <h4 class="landing-text">Browse this website to:<br />
-           - learn more <a class="generallink" href="#about_tab">about me</a><br/>
-           - check out my <a class="generallink" href="#project_tab">projects</a></br>
-           - view my <a class="generallink" href="#resume_tab">resume</a><br/>
-           - or <a class="generallink" href="#contact_tab">contact me</a></h4>
-          -->
         </div>
       </div>
     </div>
@@ -104,8 +97,23 @@
                 An algorithm developed in the R language that won 1st place at the Alameda County Science Fair. It performs statistical analysis on the hand tremors of Parkinson's patients to determine if their condition is getting better or worse.
               </h5>
               <h5 class="project-links">
-                <a class="generallink" href="https://docs.google.com/document/d/1IoekCG3no2OSVWdrILxe46UQ8Lt0ame2lE9iXe3BdDQ/edit?usp=sharing" target="_blank">View Report</a> ||
-                  <a class="generallink" href="https://docs.google.com/presentation/d/1gKMSfEw7i6QRQszp9UJoTvN3t5s02DPfmvx4g8fBboA/edit?usp=sharing">View Presentation</a>
+                <a class="generallink" href="https://docs.google.com/document/d/1IoekCG3no2OSVWdrILxe46UQ8Lt0ame2lE9iXe3BdDQ/edit?usp=sharing" target="_blank">View Report</a> |
+                <a class="generallink" href="https://docs.google.com/presentation/d/1gKMSfEw7i6QRQszp9UJoTvN3t5s02DPfmvx4g8fBboA/edit?usp=sharing">View Presentation</a>
+              </h5>
+            </div>
+          </div>
+
+          <div class="row" id="gfr_site">
+            <img src="res/img/undraw_operating_system_4lr6 (1).svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
+            <div class="col s12 xl8">
+              <h4>2Serve</h4>
+              <h5><i>Lead Developer from August 2017 - Current<br />
+                 Vice - President from August 2019 - Current</i></h5>
+              <h5>
+                An online platform seeking to bridge the gap between volunteering organizations and qualified high school volunteers.
+              </h5>
+              <h5 class="project-links">
+                <a href="https://2-serve.org/" target = "_blank" class="generallink">Visit Site</a> 
               </h5>
             </div>
           </div>
@@ -125,21 +133,6 @@
           </div>
 
           <div class="row" id="gfr_site">
-            <img src="res/img/undraw_operating_system_4lr6 (1).svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
-            <div class="col s12 xl8">
-              <h4>2Serve</h4>
-              <h5><i>Lead Developer from August 2017 - Current<br />
-                 Vice- President from August 2019 - Current</i></h5>
-              <h5>
-                An online platform seeking to bridge the gap between volunteering organizations and qualified high school volunteers.
-              </h5>
-              <h5 class="project-links">
-                <a href="https://2-serve.org/" target = "_blank" class="generallink">View Site</a> 
-              </h5>
-            </div>
-          </div>
-
-          <div class="row" id="gfr_site">
             <img src="res/img/undraw_Artificial_intelligence_oyxx (1).svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
             <div class="col s12 xl8">
               <h4>Gael Force Robotics</h4>
@@ -148,7 +141,7 @@
                 A website to showcase my robotics team (team 5327), provide resources for members, network to other VRC teams, and write in our team blog. In addition to being the website developer, I also assist in engineering the robot, programming its movement, and documenting the design process.
               </h5>
               <h5 class="project-links">
-                <a href="https://gaelforceroboticsdublin.github.io/" target = "_blank" class="generallink">View Site</a> 
+                <a href="https://gaelforceroboticsdublin.github.io/" target = "_blank" class="generallink">Visit Site</a> 
               </h5>
             </div>
           </div>
@@ -162,7 +155,7 @@
                 A website to advertise for my local karate school: West World Martial Arts Pleasanton. This is also the school where I recieved my black belt.
               </h5>
               <h5 class="project-links">
-                <a href="https://ritvikpen.github.io/WCWMA-Pleasanton-Site/about.html" target="_blank" class="generallink">View Site</a> 
+                <a href="https://ritvikpen.github.io/WCWMA-Pleasanton-Site/about.html" target="_blank" class="generallink">Visit Site</a> 
               </h5>
             </div>
           </div>
@@ -171,7 +164,7 @@
             <img src="res/img/undraw_file_searching_duff.svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
             <div class="col s12 xl8">
               <h4>Community Project</h4>
-              <h5><i>Data Analyst and Writer from November 2019 - May 2020</i></h5>
+              <h5><i>Statistician and Writer from November 2019 - Current</i></h5>
               <h5>
                 Group research was done on technology usage and its correlation to overall health and time management for our AP Biology class. Our local school students were surveyed and recommendations to improve their lifestyle were presented.
               </h5>
@@ -217,15 +210,20 @@
     </div>
     <img src="res/wave_inverse.svg" id="blue_wave_bottom">
 
-    <div class="center">
-      <div class="container">
-        <div class="col s12" id="contact_tab">
-          <h1>Contact Me</h1>
-          
-          <h4>ritviksiddha@gmail.com</h4>
-          <h4>(408) 981 9355</h4>
+    <div class="container">
+      <div class="row" id="contact_tab">
+        <div class="col s12 m5">
+          <h1>Contact</h1>
+          <h5>
+            You can reach me at
+            ritviksiddha@gmail.com
+          </h5>
         </div>
+        <img src="res/img/undraw_message_sent_1030.svg" class="col s12 m6 center">
       </div>
+    </div>
+
+    <div class="center">
       <h4  id="bottom_link">
         <a class="generallink" href="#">go back to the top</a>
       </h4>
