--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img class="col s12 xl6" src="res/img/landing_web_dev.svg">
         <div class="col s12 xl6">
           <h1 class="landing-text">Hi! I'm Ritvik.</h1>
-          <h4 class="landing-text">I want to use engineering tools to revolutionize healthcare.</h4>
+          <h4 class="landing-text">I want to use engineering to improve healthcare</h4>
           <h4 class="landing-text">
             Learn more <a class="generallink" href="#about_tab">about me</a><br />
             View my <a class="generallink" href="#project_tab">experience</a></br>
