--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
                 An algorithm developed in the R language that won 1st place at the Alameda County Science Fair. It performs statistical analysis on the hand tremors of Parkinson's patients to determine if their condition is getting better or worse.
               </h5>
               <h5 class="project-links">
-                <a class="generallink" href="https://docs.google.com/document/d/1IoekCG3no2OSVWdrILxe46UQ8Lt0ame2lE9iXe3BdDQ/edit?usp=sharing" target="_blank">View Report</a> |
-                <a class="generallink" href="https://docs.google.com/presentation/d/1gKMSfEw7i6QRQszp9UJoTvN3t5s02DPfmvx4g8fBboA/edit?usp=sharing">View Presentation</a>
+                View
+                <a class="generallink" href="https://docs.google.com/document/d/1IoekCG3no2OSVWdrILxe46UQ8Lt0ame2lE9iXe3BdDQ/edit?usp=sharing" target="_blank">Report</a>
+                or
+                <a class="generallink" href="https://docs.google.com/presentation/d/1gKMSfEw7i6QRQszp9UJoTvN3t5s02DPfmvx4g8fBboA/edit?usp=sharing">Presentation</a>
               </h5>
             </div>
           </div>
