--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img class="col s12 xl6" src="res/img/landing_web_dev.svg">
         <div class="col s12 xl6">
           <h1 class="landing-text">Hi! I'm Ritvik.</h1>
-          <h4 class="landing-text">I want to use engineering to improve healthcare</h4>
+          <h4 class="landing-text">An aspiring medical student with a passion for code</h4>
           <h4 class="landing-text">
             Learn more <a class="generallink" href="#about_tab">about me</a><br />
             View my <a class="generallink" href="#project_tab">experience</a></br>
@@ -126,20 +126,6 @@
           </div>
 
           <div class="row">
-            <img src="res/img/karate_site.svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
-            <div class="col s12 xl8">
-              <h4>WCWMA Pleasanton</h4>
-              <h5><i>Developer/Designer from August 2019 - Current</i></h5>
-              <h5>
-                A website to advertise for my local karate school: West World Martial Arts Pleasanton. This is also the school where I recieved my black belt.
-              </h5>
-              <h5 class="project-links">
-                <a href="https://ritvikpen.github.io/WCWMA-Pleasanton-Site/about.html" target="_blank" class="generallink">Visit Site</a> 
-              </h5>
-            </div>
-          </div>
-
-          <div class="row">
             <img src="res/img/undraw_file_searching_duff.svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
             <div class="col s12 xl8">
               <h4>Community Project</h4>
@@ -148,7 +134,24 @@
                 Group research was done on technology usage and its correlation to overall health and time management for our AP Biology class. Our local school students were surveyed and recommendations to improve their lifestyle were presented.
               </h5>
               <h5 class="project-links">
-                <i>Research Pending Publication</i> 
+                <a href="https://docs.google.com/presentation/d/1EeLuR5zNnw-QqY77E86_SkPSB_UxwJT6YGGvnX7nWXw/edit?usp=sharing" target = "_blank" class="generallink">View Presentation</a>
+              </h5>
+            </div>
+          </div>
+
+          <div class="row">
+            <img src="res/img/karate_site.svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
+            <div class="col s12 xl8">
+              <h4>WCWMA Pleasanton</h4>
+              <h5><i>Developer/Designer from August 2019 - Current</i></h5>
+              <h5>
+                A website to advertise for my local karate school: West World Martial Arts Pleasanton. This is also the school where I recieved my black belt.
+              </h5>
+              <h5 class="project-links">
+                <!--
+                  <a href="https://ritvikpen.github.io/WCWMA-Pleasanton-Site/about.html" target="_blank" class="generallink">Visit Site</a> 
+                  -->
+                <i>Site Under Development</i>
               </h5>
             </div>
           </div>
