--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	
 	<body>
     
+    <a id="top"></a>
     <div class="container">
       <div class="row" id="landing">
         <img class="col s12 xl6" src="res/img/landing_web_dev.svg">
@@ -51,7 +52,7 @@
               I’m an 11th grader at Dublin high school. I am a member of my school’s Biomedical Academy and have a passion for the field of healthcare. I participate in numerous activities, both in and out of school, to further my knowledge for the medical field as well as skills that I think will be useful in that area. I am involved in a number of clubs that allow me to pursue my interest in the medical field, robotics, and a number of other topics.
             </h5>
             <h5>
-              I have been at Dublin High school for 3 years now and absolutely love it. It has enabled me to challenge myself academically and take the rigorous courses that I desire. Currently, I am enrolled in AP Biology, AP Calculus AB, AP Computer Science Applications, Honors Medical Interventions, Honors English, and U.S. History. I have a cumulative GPA of 4.5 and an SAT score of 1530. I’ve enjoyed my classes so far and look forward to Junior year. In addition to the academic opportunities here, I’ve involved myself in a number of clubs at Dublin High. I am a member of HOSA (Health Occupation Students of American, a programmer for Gael Force Robotics, and Vice-President of 2Serve.
+              I have been at Dublin High school for 3 years now and absolutely love it. It has enabled me to challenge myself academically and take the rigorous courses that I desire. These include: AP Chemistry, AP Statistics, AP Biology, AP Calculus AB, AP Computer Science Applications, AP European History, Honors Medical Interventions, Honors English, and Honors Chemistry. I have a GPA of 4.85 and an SAT score of 1530. I’ve enjoyed my classes so far and look forward to Senior year. In addition to the academic opportunities here, I’ve involved myself in a number of clubs at Dublin High. I am a member of HOSA (Health Occupation Students of American, a programmer for Gael Force Robotics, and Vice-President of 2Serve.
             </h5>
           </div>
         </div>
@@ -68,10 +69,10 @@
           <div class="row">
             <img src="res/img/undraw_charts_jj6t.svg" class="col s12 m8 xl4 center" data-aos="fade-up">
             <div class="col s12 xl8">
-              <h4>Parkinson's Algorithm</h4>
+              <h4 class="exp_title">Parkinson's Algorithm</h4>
               <h5><i>Developer from November 2017 - April 2018</i></h5>
               <h5>
-                An algorithm developed in the R language that won 1st place at the Alameda County Science Fair. It performs statistical analysis on the hand tremors of Parkinson's patients to determine if their condition is getting better or worse.
+                An algorithm developed in the R language that won 1st place at the Alameda County Science Fair. It performs statistical analysis on the hand tremors of Parkinson's patients to determine if their condition is getting better or worse. The project was a gateway into Biomedical Engineering and the joy that comes with working in the Medical industry.
               </h5>
               <h5 class="project-links">
                 View
@@ -85,11 +86,11 @@
           <div class="row" id="gfr_site">
             <img src="res/img/undraw_operating_system_4lr6 (1).svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
             <div class="col s12 xl8">
-              <h4>2Serve</h4>
+              <h4 class="exp_title">2Serve</h4>
               <h5><i>Lead Developer from August 2017 - Current<br />
                  Vice - President from August 2019 - Current</i></h5>
               <h5>
-                An online platform seeking to bridge the gap between volunteering organizations and qualified high school volunteers.
+                An online platform seeking to bridge the gap between volunteering organizations and qualified high school volunteers. It is still an active club at Dublin High school with 50+ members and ~10 organizations signed up with its database. The project was submitted for the Diamond Challenge (an entrepreneurial competition) and was a state finalist.
               </h5>
               <h5 class="project-links">
                 <a href="https://2-serve.org/" target = "_blank" class="generallink">Visit Site</a> 
@@ -100,10 +101,10 @@
           <div class="row">
             <img src="res/img/undraw_mobile_interface_wakp.svg" class="col s12 m8 xl4 center" id="tap_test_img"  data-aos="fade-up">
             <div class="col s12 xl8">
-              <h4>Tap Test</h4>
+              <h4 class="exp_title">Tap Test</h4>
               <h5><i>Developer from August 2018 - December 2018</i></h5>
               <h5>
-                An application created for a Stanford MedX research group in their work on Alzheimer's. The app assists with the data collection and statistical analysis.
+                An application created for a Stanford MedX research group in their work on Alzheimer's. The app assists with the data collection and statistical analysis. It would collect data regarding each subject, record reflexes, carry out calculations automatically, and could then share the data via email. The app was used by a live research group and garnered 500+ downloads.
               </h5>
               <h5 class="project-links">
                 <a href="https://play.google.com/store/apps/details?id=com.tap.surenderpenchala.taptest&hl=en_US" target="_blank" class="generallink">View App</a> 
@@ -114,7 +115,7 @@
           <div class="row" id="gfr_site">
             <img src="res/img/undraw_Artificial_intelligence_oyxx (1).svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
             <div class="col s12 xl8">
-              <h4>Gael Force Robotics</h4>
+              <h4 class="exp_title">Gael Force Robotics</h4>
               <h5><i>Lead Developer from November 2018 - Current</i></h5>
               <h5>
                 A website to showcase my robotics team (team 5327), provide resources for members, network to other VRC teams, and write in our team blog. In addition to being the website developer, I also assist in engineering the robot, programming its movement, and documenting the design process.
@@ -126,23 +127,9 @@
           </div>
 
           <div class="row">
-            <img src="res/img/undraw_file_searching_duff.svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
-            <div class="col s12 xl8">
-              <h4>Community Project</h4>
-              <h5><i>Statistician and Writer from November 2019 - Current</i></h5>
-              <h5>
-                Group research was done on technology usage and its correlation to overall health and time management for our AP Biology class. Our local school students were surveyed and recommendations to improve their lifestyle were presented.
-              </h5>
-              <h5 class="project-links">
-                <a href="https://docs.google.com/presentation/d/1EeLuR5zNnw-QqY77E86_SkPSB_UxwJT6YGGvnX7nWXw/edit?usp=sharing" target = "_blank" class="generallink">View Presentation</a>
-              </h5>
-            </div>
-          </div>
-
-          <div class="row">
             <img src="res/img/karate_site.svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
             <div class="col s12 xl8">
-              <h4>WCWMA Pleasanton</h4>
+              <h4 class="exp_title">WCWMA Pleasanton</h4>
               <h5><i>Developer/Designer from August 2019 - Current</i></h5>
               <h5>
                 A website to advertise for my local karate school: West World Martial Arts Pleasanton. This is also the school where I recieved my black belt.
@@ -156,13 +143,27 @@
             </div>
           </div>
 
+          <div class="row">
+            <img src="res/img/undraw_file_searching_duff.svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
+            <div class="col s12 xl8">
+              <h4 class="exp_title">Community Project</h4>
+              <h5><i>Statistician and Writer from November 2019 - Current</i></h5>
+              <h5>
+                Group research was done on technology usage and its correlation to overall health and time management for our AP Biology class. Our local school students were surveyed and recommendations to improve their lifestyle were presented. Knowledge from the AP Statistics course I had previously underwent was applied to a practical context and used to positively impact student's choices regarding technology usage.
+              </h5>
+              <h5 class="project-links">
+                <a href="https://docs.google.com/presentation/d/1EeLuR5zNnw-QqY77E86_SkPSB_UxwJT6YGGvnX7nWXw/edit?usp=sharing" target = "_blank" class="generallink">View Presentation</a>
+              </h5>
+            </div>
+          </div>
+
           <div class="row" id="asdrp">
             <img src="res/img/science.svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
             <div class="col s12 xl8">
-              <h4>ASDRP Summer Research</h4>
+              <h4 class="exp_title">ASDRP Summer Research</h4>
               <h5><i>Researcher during Summer 2020</i></h5>
               <h5>
-                A Summer Research experience held at ASDRP in Fremont. Developed and conducted novel research under the supervision of professionals in the field of science 
+                Research was conducted on the COVID-19 virus under the supervision of industry professionals. Computation Biochemistry techniques were used to interact with the COVID protease. It was conducted at ASDRP in Fremont by a small group of high schoolers after rigorous training and teaching of advanced biochemistry concepts. 
               </h5>
               <h5 class="project-links">
                 <i>
@@ -207,10 +208,13 @@
 
     <div class="center">
       <h4  id="bottom_link">
-        <a class="generallink" href="#">go back to the top</a>
+        <a class="generallink" href="#top">go back to the top</a>
       </h4>
     </div>
 
+    <!--
+    <button id="myBtn"><a href="#top" style="color: white">^</a></button>
+    -->
     
     <script>
       AOS.init();
