--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <img src="res/img/undraw_file_searching_duff.svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
             <div class="col s12 xl8">
               <h4 class="exp_title">Community Project</h4>
-              <h5><i>Statistician and Writer from November 2019 - Current</i></h5>
+              <h5><i>Statistician and Writer from November 2019 - April 2020</i></h5>
               <h5>
                 Group research was done on technology usage and its correlation to overall health and time management for our AP Biology class. Our local school students were surveyed and recommendations to improve their lifestyle were presented. Knowledge from the AP Statistics course I had previously underwent was applied to a practical context and used to positively impact student's choices regarding technology usage.
               </h5>
